# OOP_2026

./: CMakeLists.txt
Aud_1/: a1_zad1.cpp  a1_zad2.cpp  a1_zad3.cpp  a1_zad4.cpp
Aud_10/: a10_zad1.cpp  a10_zad2.cpp  a10_zad3.cpp
Aud_10_KN/: a10_kn_zad1.cpp
Aud_2/: a2_zad1.cpp  a2_zad2.cpp  a2_zad3.cpp  a2_zad4.cpp
Aud_3/: a3_zad1.cpp  a3_zad2.cpp
Aud_4/: a4_zad1.cpp  a4_zad2.cpp  a4_zad3.cpp
Aud_5/: a5_zad1.cpp  a5_zad2.cpp
Aud_5_KN/: a4_kn_zad2.cpp  a5_kn_zad1.cpp  a5_kn_zad2.cpp
Aud_6/: a6_zad1.cpp  a6_zad2.cpp
Aud_7/: a7_zad1.cpp  a7_zad2.cpp
Aud_8/: a8_zad1.cpp  a8_zad2.cpp
Aud_9/: a9_zad1.cpp  a9_zad2.cpp
Kol_1/: k1_zad1.cpp
Kol_2/: k2_zad1.cpp  k2_zad2.cpp
Kol_2_PIT/: k2_pit_zad1.cpp  k2_pit_zad2.cpp
