cmake_minimum_required(VERSION 4.1)
project(Aud)

set(CMAKE_CXX_STANDARD 20)

add_executable(a1_zad1 Aud_1/a1_zad1.cpp)
add_executable(a1_zad2 Aud_1/a1_zad2.cpp)
add_executable(a1_zad3 Aud_1/a1_zad3.cpp)
add_executable(a1_zad4 Aud_1/a1_zad4.cpp)

add_executable(a2_zad1 Aud_2/a2_zad1.cpp)
add_executable(a2_zad2 Aud_2/a2_zad2.cpp)
add_executable(a2_zad3 Aud_2/a2_zad3.cpp)
add_executable(a2_zad4 Aud_2/a2_zad4.cpp)

