cmake_minimum_required(VERSION 4.1)
project(Aud)

set(CMAKE_CXX_STANDARD 20)

add_executable(a1_zad1 Aud_1/a1_zad1.cpp)
add_executable(a1_zad2 Aud_1/a1_zad2.cpp)
add_executable(a1_zad3 Aud_1/a1_zad3.cpp)
add_executable(a1_zad4 Aud_1/a1_zad4.cpp)

add_executable(a2_zad1 Aud_2/a2_zad1.cpp)
add_executable(a2_zad2 Aud_2/a2_zad2.cpp)
add_executable(a2_zad3 Aud_2/a2_zad3.cpp)
add_executable(a2_zad4 Aud_2/a2_zad4.cpp)

add_executable(a3_zad1 Aud_3/a3_zad1.cpp)
add_executable(a3_zad2 Aud_3/a3_zad2.cpp)

add_executable(a4_zad1 Aud_4/a4_zad1.cpp)
add_executable(a4_zad2 Aud_4/a4_zad2.cpp)
add_executable(a4_zad3 Aud_4/a4_zad3.cpp)

add_executable(a5_zad1 Aud_5/a5_zad1.cpp)
add_executable(a5_zad2 Aud_5/a5_zad2.cpp)

add_executable(a6_zad1 Aud_6/a6_zad1.cpp)
add_executable(a6_zad2 Aud_6/a6_zad2.cpp)

add_executable(a7_zad1 Aud_7/a7_zad1.cpp)
add_executable(a7_zad2 Aud_7/a7_zad2.cpp)

add_executable(a8_zad1 Aud_8/a8_zad1.cpp)
add_executable(a8_zad2 Aud_8/a8_zad2.cpp)

add_executable(a9_zad1 Aud_9/a9_zad1.cpp)
add_executable(a9_zad2 Aud_9/a9_zad2.cpp)

add_executable(a10_zad1 Aud_10/a10_zad1.cpp)
add_executable(a10_zad2 Aud_10/a10_zad2.cpp)
add_executable(a10_zad3 Aud_10/a10_zad3.cpp)

add_executable(a4_kn_zad2 Aud_5_KN/a4_kn_zad2.cpp)
add_executable(a5_kn_zad1 Aud_5_KN/a5_kn_zad1.cpp)
add_executable(a5_kn_zad2 Aud_5_KN/a5_kn_zad2.cpp)

add_executable(a10_kn_zad1 Aud_10_KN/a10_kn_zad1.cpp)


add_executable(k1_zad1 Kol_1/k1_zad1.cpp)

